[package]
name = "quiche-sni-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
rcgen = "0.13.1"
quiche_mio_runner = { git="https://github.com/birneee/quiche_mio_runner" }
env_logger = "0.11.5"
clap = { version = "4.5.17", features = ["derive"] }
slab = "0.4.9"
boring = "4.19.0"
